# ERC_NAV

./: .gitignore  .gitmodules  README.md  start_wheels.sh  stop_wheels.sh  wheels_control.service
.github/workflows/: docker_ci.yml
astra_ros2_description/: CMakeLists.txt  package.xml
astra_ros2_description/launch/: urdf_launch.py
astra_ros2_description/rviz/: urdf_config.rviz
astra_ros2_description/src/description/: astra.urdf  depthai_descr.urdf.xacro  depthai_macro.urdf.xacro
cs_interface/: package.xml  setup.cfg  setup.py
cs_interface/cs_interface/: cs_interface_node.py  nav_to_pose.py  new_receive_goal.py  receive_goal.py  robot_navigator.py  send_goal.py
cs_interface/launch/: cs_interface.launch.xml
custom_msg/: CMakeLists.txt
custom_msg/msg/: Motorstatus.msg
docker_foxy_desktop/: Dockerfile  attach_to_docker.sh  build.sh  run.sh  run_no_gpu.sh
docker_foxy_jetson/: Dockerfile  attach_to_docker.sh  build.sh  run.sh
docker_humble_desktop/: Dockerfile  attach_to_docker.sh  build.sh  frames.gv  mdp  run.sh  run_no_gpu.sh
docker_humble_jetson/: Dockerfile  attach_to_docker.sh  build.sh  run.sh  start_wheels_docker.sh
fake_nav_cs/: package.xml  setup.cfg  setup.py
fake_nav_cs/fake_nav_cs/: fake_cs_node.py  test_nav_pub.py
interfacing_nav_cs/: package.xml  setup.cfg  setup.py
interfacing_nav_cs/interfacing_nav_cs/: NavCSInterface.py  new_camera_cs.py
interfacing_nav_cs/launch/: test.py
localization/camera/ros2_aruco/: package.xml  readme.md  setup.py
localization/camera/ros2_aruco_interfaces/: CMakeLists.txt
localization/li_slam_ros2/scanmatcher/: package.xml  (+1 more)
localization/mapping/: cloudCorner.pcd  cloudGlobal.pcd  cloudSurf.pcd  trajectory.pcd  transformations.pcd
magellan/: CMakeLists.txt  package.xml
magellan/scripts/: magellan_talking_node.py
nav_recorder/: CMakeLists.txt  package.xml
nav_recorder/launch/: recorder.launch.xml
nav_recorder/scripts/: pub_initial_pose_rover.py  recorder_pose_motors.py  recorder_pose_rover.py
navigation/path_planning/: CMakeLists.txt
navigation/rotation_controller/: CMakeLists.txt  package.xml  rotation_controller.xml
navigation2/nav2_lifecycle_manager/: README.md
oakd_test/: package.xml  setup.cfg  setup.py
oakd_test_package/: package.xml  setup.cfg  setup.py
oakd_test_package/oakd_test_package/: oakd_test copy.py  oakd_test.py
obstacle_detection/lidar/lidar_filter/: CMakeLists.txt  package.xml
obstacle_detection/lidar/lidar_filter/launch/: filter.launch.py
obstacle_detection/lidar/lidar_filter/src/: lidar_filter.cpp
obstacle_detection/ptcl_fusion/: CMakeLists.txt  config.viz.rviz  package.xml
obstacle_detection/ptcl_fusion/src/: ptcl_concat.cpp
path_planning/: CMakeLists.txt  package.xml
path_planning/config/: ekf.yaml  map_server_params.yaml  nav2_params.yaml  nav2_params_real.yaml  static_cost_map.yaml
path_planning/launch/: display.launch.py  launch_nav2.launch.py  nav2.launch.py  nav2_real.launch.py
path_planning/path_planning/: fake_odom_tf_publisher.py  fake_pcd_creator.py  speed_pub.py  static_cost_map_creator.py  static_cost_map_publisher.py  static_costmap_creator.py  static_costmap_creator_2024.py  static_map_pcd_to_tif_converter.py  static_map_publisher.py
path_planning/saved_maps/: cloud_global.tif  fake_static_map.pcd  fake_static_map.tif  static_map.pcd  static_map.tif
rover_description/: CMakeLists.txt  package.xml
rover_description/launch/: display.launch.py  launch_real.launch.py  launch_sim.launch.py  robot_state.launch.py
rover_description/urdf/: assemblage.urdf.xacro  imu.xacro  kerby.gazebo  kerby.trans  oakd_camera.xacro  ouster.xacro  ros2_control.xacro
rover_description/worlds/: cafe.world  simple.world
sensors/camera/: CMakeLists.txt  client_id  package.xml
sensors/camera/front_camera/: obstacles.rviz
sensors/camera/front_camera/launch/: obstacle_pc.launch.xml  stereo.launch.py
sensors/camera/front_camera/src/: stereo_publisher.cpp
sensors/camera/launch/: obstacle_pc.launch.xml
sensors/detect_panel/: CMakeLists.txt  package.xml
sensors/front_camera/: package.xml
sensors/obstacle_filter/: package.xml  setup.cfg  setup.py
sensors/obstacle_filter/launch/: obstacle_filter.launch.py
sensors/obstacle_filter/obstacle_filter/: obstacle_filter_node.py
sensors/obstacle_filter/obstacle_filter/filter/: filter.py  ransac_filter_old.py
sensors/obstacle_filter/old/: analyzeTestImages.py  getDepthImages.py  new.py  pretty.py  prettyVideo.py
wheels_control/: CMakeLists.txt  package.xml
wheels_control/doc/: epos_config_node_1.txt  epos_config_node_4.txt  wheels_doc.md
wheels_control/include/wheels_control/: basic_kinematic_model.hpp  definition.hpp  diagonal_kinematic_model.hpp  lateral_kinematic_model.hpp  motors.hpp  normal_kinematic_model.hpp  normal_kinematic_model_slow.hpp  stby_kinematic_model.hpp  utility.hpp
wheels_control/launch/: wheels_control.launch.py  wheels_control.launch.xml
wheels_control/params/: wheels_params.yaml
wheels_control/scripts/: fake_cs_gamepad.py  fake_cs_shutdown.py
wheels_control/src/: Cmd_vel_manager_node.cpp  Displacement_cmds_node.cpp  Gamepad_interface_node.cpp  Motors_cmds_node.cpp  Motors_cmds_node_lifecycle.cpp  motors.cpp
wheels_control/src/kinematic_models/: basic_kinematic_model.cpp  diagonal_kinematic_model.cpp  lateral_kinematic_model.cpp  normal_kinematic_model.cpp  normal_kinematic_model_old.cpp  normal_kinematic_model_slow.cpp  stby_kinematic_model.cpp
xplore_description/: CMakeLists.txt  package.xml
xplore_description/config/: control.yaml  ekf.yaml
xplore_description/launch/: launch_real.launch.py  launch_sim.launch.py  robot_state.launch.py  xplore_real.launch.py  xplore_sim.launch.py
xplore_description/rviz/: display_config.rviz
xplore_description/urdf/: assemblage.urdf.xacro  imu.xacro  inertial_dummy_test.urdf.xacro  kerby.gazebo  materials.xacro  oakd_camera.xacro  ouster.xacro
xplore_description/worlds/: marsyard2022.world.xacro  marsyard2023.world.xacro  simple.world  test.world
xplore_description/xplore_description/: ros_control_cmd_bridge.py
(+124 files in other folders)
