<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>front_camera</name>
  <version>0.0.0</version>
  <description>Front camera node</description>
  <maintainer email="david.farah@epfl.ch">anoca</maintainer>
  <license>JAJ</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>camera_info_manager</depend>
    <depend>depthai_bridge</depend>
    <depend>depthai</depend>
    <depend>rcl_cpp</depend>
    <depend>sensor_msgs</depend>
    <depend>stereo_msgs</depend>
    <depend>std_msgs</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>opencv2</depend>
    
    <depend>pcl_conversions</depend>
    <depend>PCL</depend>
  </export>
</package>
