<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_filter</name>
  <version>0.0.0</version>
  <description>obstacle filter node</description>
  <maintainer email="aurelio.noca@epfl.ch">anoca</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>opencv2</depend>
    <depend>ransac_filter</depend>
    <depend>lstsq_filter</depend>
    <depend>filter</depend>
    <depend>slope_filter</depend>
  </export>
</package>
