<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_filter</name>
  <version>0.0.0</version>
  <description>Lidar filter node</description>
  <maintainer email="aurelio.noca@epfl.ch">anoca</maintainer>
  <license>JAJ</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>rclcpp</depend>
    <depend>pcl_conversions</depend>
    <depend>PCL</depend>
  </export>
</package>
